<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".billSplitPage">

    <EditText
        android:id="@+id/hntGroup"
        android:layout_width="302dp"
        android:layout_height="70dp"
        android:layout_marginBottom="348dp"
        android:ems="10"
        android:hint="@string/hntGroup"
        android:inputType="numberDecimal"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/hntBill"
        android:layout_width="306dp"
        android:layout_height="69dp"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/hntBill"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064" />

    <TextView
        android:id="@+id/txtBill"
        android:layout_width="259dp"
        android:layout_height="75dp"
        android:layout_marginTop="140dp"
        android:text="@string/txtBill"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hntGroup"
        app:layout_constraintVertical_bias="0.557" />

    <Spinner
        android:id="@+id/spnQuality"
        android:layout_width="196dp"
        android:layout_height="44dp"
        android:entries="@array/spnQuality"
        android:prompt="@string/spnQuality"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toTopOf="@+id/txtBill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hntGroup"
        app:layout_constraintVertical_bias="0.164" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCalculate"
        app:layout_constraintBottom_toTopOf="@+id/txtBill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnQuality" />

</androidx.constraintlayout.widget.ConstraintLayout>